login, signup page, validation, reusable errors

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -60,3 +60,9 @@ $accent-palette: (
 
 // Size
 $baseSize: 6px;
+$baseBorderRadius: 9px;
+$fontSize: 16px;
+$fontSizeSmaller: 14px;
+$fontSizeSmall: 12px;
+$fontSizeLarger: 20px;
+$fontSizeLarge: 24px;
