--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -31,3 +31,30 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+p,
+h1 {
+  margin: 0;
+}
+
+
+.mdc-notched-outline__trailing, .mdc-notched-outline__leading, .mdc-notched-outline__notch{
+  border-width: 2px !important;
+  border-color: $whiteColor !important;
+  transition: all .2s ease-in-out;
+}
+
+.mdc-text-field--invalid {
+  .mdc-notched-outline__trailing, .mdc-notched-outline__leading, .mdc-notched-outline__notch{
+    border-width: 2px !important;
+    border-color: rgb(252, 79, 79) !important;
+    transition: all .2s ease-in-out;
+  }
+}
+
+.mdc-text-field--focused {
+  .mdc-notched-outline__trailing, .mdc-notched-outline__leading, .mdc-notched-outline__notch{
+    border-width: 2px !important;
+    transition: all .2s ease-in-out;
+  }
+}
