init auth logic

--- a/src/app/modules/authorization/pages/login-page/login-page.component.html
+++ b/src/app/modules/authorization/pages/login-page/login-page.component.html
@@ -30,7 +30,8 @@
           <span (click)="navigateToResetPassPage()">Reset</span>
         </p>
 
-        <button mat-flat-button color="accent" (click)="loginUser()">Login</button>
+        <button mat-flat-button color="accent" (click)="loginUser()">Login</button> <!-- Directive with warn color animation -->
+        <p class="server-error" [ngClass]="{'shown': formError}">{{formError}}</p>
       </form>
       <hr />
       <p class="register">
