--- a/src/app/modules/authorization/pages/login-page/login-page.component.scss
+++ b/src/app/modules/authorization/pages/login-page/login-page.component.scss
@@ -80,3 +80,15 @@ hr {
 .error-position {
   margin-top: $baseSize*-1 !important;
 }
+
+.server-error {
+  color: red;
+  font-size: $fontSizeSmaller;
+  text-align: center;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+}
+
+.shown {
+  opacity: 1;
+}
