--- a/src/app/modules/expenses/pages/expenses-page/expenses-page.component.html
+++ b/src/app/modules/expenses/pages/expenses-page/expenses-page.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="expenses-table">
   <app-table-header></app-table-header>
   <app-transactions-table [displayedColumns]="columns" [dataSource]="data">
   </app-transactions-table>
