--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $lightGrayColor: #e6e6e8;
 $subGrayColor1: #c8c8cb;
 $subGrayColor2: #9d9d9f;
 $subGrayColor3: #58585a;
+$warnColor: #f44336;
 
 
 // Size
