--- a/src/app/modules/expenses/pages/expenses-page/expenses-page.component.scss
+++ b/src/app/modules/expenses/pages/expenses-page/expenses-page.component.scss
@@ -1,6 +1,6 @@
 @import '/src/styles/variables.scss';
 
-.content {
+.expenses-table {
   width: 100%;
   height: 100%;
   background-color: $primaryColor;
