--- a/src/app/modules/home/pages/home-page/home-page.component.scss
+++ b/src/app/modules/home/pages/home-page/home-page.component.scss
@@ -4,12 +4,18 @@
   display: flex;
   background-color: $bgColor;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   .menu {
-    width: 13%;
+    width: 10%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
   }
   .content {
     width: 100%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
     padding: $baseSize*4;
   }
 }
