--- a/src/app/modules/transactions/pages/expenses-page/expenses-page.component.scss
+++ b/src/app/modules/transactions/pages/expenses-page/expenses-page.component.scss
@@ -1,9 +1,22 @@
 @import '/src/styles/variables.scss';
 
+:host {
+  height: 100%;
+}
+
 .expenses-table {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   background-color: $primaryColor;
   border-radius: $baseBorderRadius*2;
   padding: $baseSize*4 0;
+  &_header {
+    padding-left: $baseSize * 4;
+    color: $whiteColor;
+    margin: 0;
+  }
 }
+
+
