--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,3 +18,15 @@ p,
 h1 {
   margin: 0;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
