--- a/src/app/modules/transactions/components/transactions-table/transactions-table.component.scss
+++ b/src/app/modules/transactions/components/transactions-table/transactions-table.component.scss
@@ -11,13 +11,15 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-right: $baseSize * 4;
+  padding: 0$baseSize * 4;
   h2 {
     margin-right: auto;
     font-size: $fontSizeLarge;
   }
   button {
     font-size: $fontSize;
+    padding: $baseSize*3;
+    margin-right: auto;
   }
 
   .search-field {
@@ -30,7 +32,7 @@
     }
   }
   .range-select {
-    margin: 0 $baseSize * 2;
+    margin-left: $baseSize * 2;
   }
 }
 
@@ -47,6 +49,13 @@ mat-spinner {
     background-color: $primaryColor;
     * {
       color: white;
+    }
+    .transaction-row {
+      cursor: pointer;
+      transition: background-color .2s ease-in-out;
+      &:hover {
+        background-color: $subGrayColor3;
+      }
     }
   }
   &_spinner {
