edit, delete transaction logic and UI

--- a/src/app/modules/transactions/pages/expenses-page/expenses-page.component.html
+++ b/src/app/modules/transactions/pages/expenses-page/expenses-page.component.html
@@ -6,6 +6,7 @@
     [paginatorLength]="paginatorLength"
     (addTransactionClicked)="openAddExpenseModal()"
     (filterStateChanged)="getTransactionsList($event)"
+    (rowClicked)="openEditExpenseModal($event)"
   >
   </app-transactions-table>
 </div>
