--- a/src/app/modules/transactions/pages/incomes-page/incomes-page.component.html
+++ b/src/app/modules/transactions/pages/incomes-page/incomes-page.component.html
@@ -6,6 +6,7 @@
     [paginatorLength]="paginatorLength"
     (addTransactionClicked)="openAddIncomeModal()"
     (filterStateChanged)="getTransactionsList($event)"
+    (rowClicked)="openEditIncomeModal($event)"
   >
   </app-transactions-table>
 </div>
