--- a/src/app/modules/transactions/components/transaction-form-modal/transaction-form-modal.component.html
+++ b/src/app/modules/transactions/components/transaction-form-modal/transaction-form-modal.component.html
@@ -1,6 +1,9 @@
 <div class="dialog-header">
-  <h1 mat-dialog-title>New expense</h1>
-  <button mat-icon-button tabindex="-1" mat-dialog-close>
+  <h1 mat-dialog-title>{{formTitle}}</h1>
+  <button mat-icon-button color="warn" tabindex="-1" *ngIf="isDeletable" class="delete-btn" (click)="onDeleteBtnClick()">
+    <mat-icon>delete</mat-icon>
+  </button>
+  <button mat-icon-button tabindex="-1" mat-dialog-close class="close-btn">
     <mat-icon>close</mat-icon>
   </button>
 </div>
