--- a/src/app/modules/transactions/components/transaction-form-modal/transaction-form-modal.component.scss
+++ b/src/app/modules/transactions/components/transaction-form-modal/transaction-form-modal.component.scss
@@ -2,10 +2,13 @@
 
 .dialog-header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  button {
+  h1 {
+    padding-right: 0;
+  }
+  .close-btn {
     color: $whiteColor;
+    margin-left: auto;
   }
 }
 
