--- a/src/app/modules/transactions/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/transactions/components/transactions-table/transactions-table.component.html
@@ -40,7 +40,11 @@
       <td
         mat-cell
         *matCellDef="let transaction"
-        [ngClass]="transaction.type === 'Expense' ? 'expense-transaction' : 'income-transaction'"
+        [ngClass]="
+          transaction.type === 'Expense'
+            ? 'expense-transaction'
+            : 'income-transaction'
+        "
       >
         {{ transaction.amount | currency: "Br " }}
       </td>
@@ -51,17 +55,22 @@
       <td mat-cell *matCellDef="let transaction">
         {{ transaction.description }}
       </td>
-
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-        <td mat-cell *matCellDef="let transaction">
-          {{ transaction.category.name || "-" }}
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row *matRowDef="let row; columns: columns" (click)="onRowClick(row)" class="transaction-row"></tr>
     </ng-container>
+
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+      <td mat-cell *matCellDef="let transaction">
+        {{ transaction.category.name || "-" }}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: columns"
+      (click)="onRowClick(row)"
+      class="transaction-row"
+    ></tr>
   </table>
   <mat-paginator
     class="paginator"
